Update theme and fix weird scroll overflow issue

--- a/css/app.css
+++ b/css/app.css
@@ -50,10 +50,10 @@ html {
 }
 
 body {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: ;
     margin: 0;
     padding: 0;
     background: var(--main-colour);
@@ -68,7 +68,7 @@ p {
 }
 
 .header {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
@@ -85,7 +85,7 @@ p {
 }
 
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100vw;
@@ -99,7 +99,7 @@ p {
     margin-left: 6em;
     margin-right: 6em;
     top: 5.5em;
-    padding: 1em 0 45.5em;
+    padding: 1em 0 5.5em;
     left: 0;
     right: 0;
     overflow: hidden;
@@ -143,7 +143,7 @@ p {
 
 .appContNote {
     display: block;
-    margin-right: 10px;
+    margin-right: 25px;
     margin-top: 10px;
     float: right;
 }
@@ -151,11 +151,11 @@ p {
 .appDevName a {
     display: inline-block;
     text-decoration: none;
-    color: #66424a
+    color: #555d8b
 }
 
 .appContNote a {
     display: inline-block;
     text-decoration: none;
-    color: #416655
+    color: #558b66
 }
